--- a/Bootstrap-Initial-Project/index.html
+++ b/Bootstrap-Initial-Project/index.html
@@ -7,7 +7,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <!-- fontawesome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -20,11 +26,169 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container bg-secondary text-white p-4">
+      <div class="row">
+        <div class="col">
+          <h1>Standard Headding</h1>
+          <p class="text-danger">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Accusantium, perferendis.
+          </p>
+          <button class="btn btn-primary m-2 p-2">Primary Button</button>
+          <button class="btn btn-danger m-3 p-3">danger Button</button>
+        </div>
+      </div>
+    </div>
+    <!-- Container ends -->
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <!-- container-fluid starts -->
+    <div class="container-fluid text-dark bg-warning p-5">
+      <div class="row">
+        <div class="col">
+          <h1 class="display-1">display-1</h1>
+          <h1 class="display-4">display-4</h1>
+          <p class="lead px-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+            totam culpa hic. Dicta nemo incidunt quibusdam ab consequatur,
+            voluptatem possimus!
+          </p>
+          <button class="btn btn-dark text-danger mt-4">btn-dark</button>
+          <button class="btn btn-success text-muted mb-4">btn-dark</button>
+          <button class="btn btn-secondary text-primary mx-4">
+            btn-secondary
+          </button>
+        </div>
+      </div>
+    </div>
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <!-- first section starts -->
+    <section class="bg-dark">
+      <div class="container">
+        <div class="row height-100 align-items-center text-center">
+          <div class="col">
+            <h1 class="text-white">Section Example</h1>
+            <p class="display-4 text-warning">Paragraph Display</p>
+            <p class="text-info px-5 text-right">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum esse officia, nobis totam porro nihil voluptate quam
+              optio perspiciatis molestias?
+            </p>
+            <p class="text-left text-white py-4">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
+              voluptas dolorem est eum, reiciendis alias placeat deserunt
+              aspernatur doloremque eos?
+            </p>
+            <button class="btn btn-warning text-secondary">Btn Warning</button>
+            <button class="btn btn-info text-dark">btn info</button>
+            <button class="btn btn-light text-dark">btn light</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- section-2 starts -->
+    <section class="bg-info">
+      <div class="container">
+        <div
+          class="row height-100 align-items-center justify-content-center text-center"
+        >
+          <div class="col-9">
+            <h1 class="display-2">UDEMY</h1>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime
+              animi praesentium perferendis modi veritatis minima alias sapiente
+              iste dicta nulla.
+            </p>
+            <button class="btn btn-warning">btn warning</button>
+            <button class="btn btn-danger">btn warning</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section-2 ends -->
+    <!-- section-3 starts -->
+
+    <section class="bg-primary py-5">
+      <div class="container-fluid">
+        <div class="row text-center">
+          <div class="col-sm-3 bg-warning">
+            <i class="fas fa-home fa-3x"></i>
+            <h1>fa-home</h1>
+          </div>
+          <div class="col-sm-3 bg-success">
+            <i class="fas fa-home fa-3x"></i>
+            <h1>fa-home</h1>
+          </div>
+          <div class="col-sm-3 bg-dark">
+            <i class="fas fa-home fa-3x"></i>
+            <h1>fa-home</h1>
+          </div>
+          <div class="col-sm-3 bg-danger">
+            <i class="fas fa-home fa-3x"></i>
+            <h1>fa-home</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section-3 ends -->
+    <!-- section 4 starts -->
+    <section class="bg-success py-5">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-8 bg-info mb-3">
+            <i class="fas fa-home fa-3x"></i>
+            <h1>fa-home</h1>
+          </div>
+          <div class="col-4 bg-warning mb-3">
+            <i class="fas fa-home fa-3x"></i>
+            <h1>fa-home</h1>
+          </div>
+          <div class="col-4 bg-warning mb-3">
+            <i class="fas fa-home fa-3x"></i>
+            <h1>fa-home</h1>
+          </div>
+          <div class="col-8 bg-info mb-3">
+            <i class="fas fa-home fa-3x"></i>
+            <h1>fa-home</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section 4 ends -->
+    <!-- section-5 starts -->
+    <section class="bg-light py-5">
+      <div class="row text-center">
+        <div class="col-md-6 col-lg-3 mb-4 px-3">
+          <i class="fab fa-html5 fa-3x text-info"></i>
+          <h2 class="text-capitalize py-3">Learn info</h2>
+          <p class="text-muted">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
+            ad. Exercitationem incidunt voluptate dolores quo ut labore repellat
+            asperiores nisi?
+          </p>
+        </div>
+        <div class="col-md-6 col-lg-6 mb-4 px-3">
+          <i class="fab fa-css3 fa-3x text-info"></i>
+          <h2 class="text-capitalize py-3">Learn CSS</h2>
+          <p class="text-muted">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
+            ad. Exercitationem incidunt voluptate dolores quo ut labore repellat
+            asperiores nisi?
+          </p>
+        </div>
+        <div class="col-md-6 col-lg-3 mb-4 px-3 mx-auto">
+          <i class="fab fa-js fa-3x text-info"></i>
+          <h2 class="text-capitalize py-3">Learn JAVASCRIPT</h2>
+          <p class="text-muted">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
+            ad. Exercitationem incidunt voluptate dolores quo ut labore repellat
+            asperiores nisi?
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- section-5 ends -->
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
