--- a/Blog-template/index.html
+++ b/Blog-template/index.html
@@ -83,10 +83,10 @@
     <section class="hero py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-8 border border-warning">
             <!-- Single Post -->
             <div class="hero-post mb-3 mb-lg-0">
-              <img src="img/01.jpg" alt="" class="img-fluid" />
+              <img src="img/01.jpg" width="734px" alt="" class="img-fluid" />
               <div class="hero-post-badges">
                 <p><i class="fas fa-calendar-alt me-3"></i>15 March 2020</p>
                 <p>Technology</p>
@@ -164,12 +164,12 @@
     <section class="blog-posts py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-8 border border-warning">
             <!-- blog post -->
-            <article class="blog-post mb-3 h-155">
-              <div class="row align-items-center">
+            <article class="blog-post blog-post-1 mb-3">
+              <div class="row">
                 <div class="col-sm-4">
-                  <img src="img/01.jpg" class="img-fluid h-155" alt="" />
+                  <img src="img/01.jpg" class="img-fluid" alt="" />
                 </div>
                 <div class="col-sm-8">
                   <h4>My Blog post</h4>
@@ -178,17 +178,17 @@
                     Omnis odio sit eveniet quos saepe eos sint voluptates nulla
                     dolores cupiditate.
                   </p>
-                  <a href="#"> Science</a>
+                  <a href="#" class="me-2"> Science</a>
                   <a href="#"> Technology</a>
                 </div>
               </div>
             </article>
             <!-- end of blog post -->
             <!-- blog post -->
-            <article class="blog-post mb-3 h-155">
-              <div class="row align-items-center">
+            <article class="blog-post blog-post-1 mb-3">
+              <div class="row">
                 <div class="col-sm-4">
-                  <img src="img/02.jpg" class="img-fluid h-155" alt="" />
+                  <img src="img/01.jpg" class="img-fluid" alt="" />
                 </div>
                 <div class="col-sm-8">
                   <h4>My Blog post</h4>
@@ -197,17 +197,17 @@
                     Omnis odio sit eveniet quos saepe eos sint voluptates nulla
                     dolores cupiditate.
                   </p>
-                  <a href="#"> Science</a>
+                  <a href="#" class="me-2"> Science</a>
                   <a href="#"> Technology</a>
                 </div>
               </div>
             </article>
             <!-- end of blog post -->
             <!-- blog post -->
-            <article class="blog-post mb-3 h-155">
-              <div class="row align-items-center">
+            <article class="blog-post blog-post-1 mb-3">
+              <div class="row">
                 <div class="col-sm-4">
-                  <img src="img/03.jpg" class="img-fluid h-155" alt="" />
+                  <img src="img/01.jpg" class="img-fluid" alt="" />
                 </div>
                 <div class="col-sm-8">
                   <h4>My Blog post</h4>
@@ -216,17 +216,17 @@
                     Omnis odio sit eveniet quos saepe eos sint voluptates nulla
                     dolores cupiditate.
                   </p>
-                  <a href="#"> Science</a>
+                  <a href="#" class="me-2"> Science</a>
                   <a href="#"> Technology</a>
                 </div>
               </div>
             </article>
             <!-- end of blog post -->
             <!-- blog post -->
-            <article class="blog-post mb-3 h-155">
-              <div class="row align-items-center">
+            <article class="blog-post blog-post-1 mb-3">
+              <div class="row">
                 <div class="col-sm-4">
-                  <img src="img/01.jpg" class="img-fluid h-155" alt="" />
+                  <img src="img/01.jpg" class="img-fluid" alt="" />
                 </div>
                 <div class="col-sm-8">
                   <h4>My Blog post</h4>
@@ -235,17 +235,17 @@
                     Omnis odio sit eveniet quos saepe eos sint voluptates nulla
                     dolores cupiditate.
                   </p>
-                  <a href="#"> Science</a>
+                  <a href="#" class="me-2"> Science</a>
                   <a href="#"> Technology</a>
                 </div>
               </div>
             </article>
             <!-- end of blog post -->
             <!-- blog post -->
-            <article class="blog-post h-155">
-              <div class="row align-items-center">
+            <article class="blog-post blog-post-1 mb-3">
+              <div class="row">
                 <div class="col-sm-4">
-                  <img src="img/03.jpg" class="img-fluid h-155" alt="" />
+                  <img src="img/01.jpg" class="img-fluid" alt="" />
                 </div>
                 <div class="col-sm-8">
                   <h4>My Blog post</h4>
@@ -254,29 +254,48 @@
                     Omnis odio sit eveniet quos saepe eos sint voluptates nulla
                     dolores cupiditate.
                   </p>
-                  <a href="#"> Science</a>
+                  <a href="#" class="me-2"> Science</a>
+                  <a href="#"> Technology</a>
+                </div>
+              </div>
+            </article>
+            <!-- end of blog post -->
+            <!-- blog post -->
+            <article class="blog-post blog-post-1 mb-3">
+              <div class="row">
+                <div class="col-sm-4">
+                  <img src="img/01.jpg" class="img-fluid" alt="" />
+                </div>
+                <div class="col-sm-8">
+                  <h4>My Blog post</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Omnis odio sit eveniet quos saepe eos sint voluptates nulla
+                    dolores cupiditate.
+                  </p>
+                  <a href="#" class="me-2"> Science</a>
                   <a href="#"> Technology</a>
                 </div>
               </div>
             </article>
             <!-- end of blog post -->
           </div>
-          <aside class="col-md-4">
+          <div class="col-md-4">
             <!-- social-links -->
-            <div class="social-links">
-              <div class="row text-center h-100">
-                <div class="col-4 bg-danger py-5">
-                  <a href="#" class="social-link">
+            <div class="social-links mt-3 mt-md-0">
+              <div class="row m-0">
+                <div class="col-4 social-link-1 h-155">
+                  <a href="#" class="">
                     <i class="fab fa-facebook"></i>
                   </a>
                 </div>
-                <div class="col-4 bg-success py-5">
-                  <a href="#" class="social-link">
+                <div class="col-4 social-link-2 h-155">
+                  <a href="#" class="">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </div>
-                <div class="col-4 bg-warning py-5">
-                  <a href="#" class="social-link">
+                <div class="col-4 social-link-3 h-155">
+                  <a href="#" class="">
                     <i class="fab fa-youtube"></i>
                   </a>
                 </div>
@@ -284,10 +303,10 @@
             </div>
             <!-- end of social-links -->
             <!-- Author -->
-            <div class="author py-3">
+            <div class="authors py-3">
               <h4>Authors</h4>
               <!-- single author -->
-              <article class="row mb-3 mt-3 author">
+              <article class="row mb-3 mt-3 author m-0">
                 <div class="col-sm-4">
                   <img
                     src="img/p-1.jpg"
@@ -299,13 +318,13 @@
                   <h6>John Doe</h6>
                   <p>Lorem ipsum dolor sit amet.</p>
                   <div class="social-links">
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-youtube"></i>
                     </a>
                   </div>
@@ -313,7 +332,7 @@
               </article>
               <!-- end of single author -->
               <!-- single author -->
-              <article class="row mb-3 author">
+              <article class="row mb-3 author m-0">
                 <div class="col-sm-4">
                   <img
                     src="img/p-2.jpg"
@@ -325,13 +344,13 @@
                   <h6>John Doe</h6>
                   <p>Lorem ipsum dolor sit amet.</p>
                   <div class="social-links">
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-youtube"></i>
                     </a>
                   </div>
@@ -339,7 +358,7 @@
               </article>
               <!-- end of single author -->
               <!-- single author -->
-              <article class="row mb-3 author">
+              <article class="row mb-3 author m-0">
                 <div class="col-sm-4">
                   <img
                     src="img/p-3.jpg"
@@ -351,13 +370,13 @@
                   <h6>John Doe</h6>
                   <p>Lorem ipsum dolor sit amet.</p>
                   <div class="social-links">
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-youtube"></i>
                     </a>
                   </div>
@@ -365,7 +384,7 @@
               </article>
               <!-- end of single author -->
               <!-- single author -->
-              <article class="row mb-3 author">
+              <article class="row mb-3 author m-0">
                 <div class="col-sm-4">
                   <img
                     src="img/p-1.jpg"
@@ -377,13 +396,13 @@
                   <h6>John Doe</h6>
                   <p>Lorem ipsum dolor sit amet.</p>
                   <div class="social-links">
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#" class="social-links">
+                    <a href="#" class="social-link">
                       <i class="fab fa-youtube"></i>
                     </a>
                   </div>
@@ -392,25 +411,25 @@
               <!-- end of single author -->
             </div>
             <!-- End Of Author -->
-
-            <!-- popular categories -->
-            <div class="popular-categories py-3">
-              <h4>Popular Categories</h4>
-              <div class="badge text-center w-100 border border-danger">
-                <p class="badge-link"><a href="#">Technologie</a></p>
-                <p class="badge-link"><a href="#">React</a></p>
-                <p class="badge-link"><a href="#">Bootstrap</a></p>
-                <p class="badge-link"><a href="#">Node/Express</a></p>
-                <p class="badge-link"><a href="#">Mern</a></p>
-                <p class="badge-link"><a href="#">Php</a></p>
-                <p class="badge-link"><a href="#">Javascript</a></p>
-                <p class="badge-link"><a href="#">Html/Css</a></p>
-                <p class="badge-link"><a href="#">Python</a></p>
-                <p class="badge-link"><a href="#">Wordpress</a></p>
+            <!-- Popular Categories -->
+            <div class="popular-categories">
+              <div class="row m-0">
+                <div class="col-12">
+                  <span>Technology</span>
+                  <span>html</span>
+                  <span>css</span>
+                  <span>js</span>
+                  <span>node</span>
+                  <span>react</span>
+                  <span>php</span>
+                  <span>vue</span>
+                  <span>wordpress</span>
+                  <span>gatsby</span>
+                </div>
               </div>
             </div>
-            <!-- end popular categories -->
-          </aside>
+            <!-- end of Popular Categories -->
+          </div>
         </div>
       </div>
     </section>
@@ -418,15 +437,15 @@
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container">
-        <div class="row">
-          <div class="col-md-4">
+        <div class="row g-1">
+          <div class="col-md-4 logos">
             <a href="" class="logo">BloGG</a>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde,
               qui?
             </p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 useful-links">
             <h4>Useful Links</h4>
             <ul>
               <li><a href="">Home</a></li>
@@ -436,7 +455,7 @@
               <li><a href="">Contact</a></li>
             </ul>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 newsletter">
             <h4>Newsletter</h4>
             <form class="d-flex">
               <input
