--- a/car/index.html
+++ b/car/index.html
@@ -110,14 +110,14 @@
               <button class="btn btn-dark btn-text-orange">READ MORE</button>
             </div>
           </div>
-          <div class="col-md-3 mx-auto">
+          <div class="col-md-3">
             <div class="cab-right mt-5 bg-white mb-5 mb-md-0">
               <h5
                 class="text-uppercase mt-md-3 text-white bg-dark p-3 text-center"
               >
                 book a cab
               </h5>
-              <form class="row px-4 py-1">
+              <form class="row py-1 g-0">
                 <div class="col-6">
                   <input type="text" placeholder="Name" class="form-control" />
                 </div>
@@ -327,7 +327,7 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-around py-5">
+      <div class="row justify-content-around py-5 m-0">
         <!-- single testimony -->
         <div class="col-md-5 p-4 bg-dark single-testimony mb-3 mb-md-0">
           <p>
@@ -370,12 +370,14 @@
     <!-- end of Testimony -->
     <!-- call section -->
     <section class="call py-5 bg-orange">
-      <div class="row">
-        <div class="col-10 mx-auto text-center">
-          <h4 class="text-uppercase">
-            we are to take your call 24hours, 7days
-          </h4>
-          <h1>+123 4567 8900</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-10 mx-auto text-center">
+            <h4 class="text-uppercase">
+              we are to take your call 24hours, 7days
+            </h4>
+            <h1>+123 4567 8900</h1>
+          </div>
         </div>
       </div>
     </section>
