--- a/car/index.html
+++ b/car/index.html
@@ -93,7 +93,7 @@
     <section class="cab bg-orange pt-5">
       <div class="container">
         <div class="row py-sm-5 cab-top-margin">
-          <div class="col-md-7 text-dark">
+          <div class="col-md-7 text-dark text-center text-md-start">
             <div class="cab-left pt-md-5">
               <h5 class="text-uppercase mt-md-3 text-black">BEst In City</h5>
               <h3 class="text-black text-uppercase">
@@ -110,9 +110,11 @@
               <button class="btn btn-dark btn-text-orange">READ MORE</button>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="cab-right mt-5 bg-white">
-              <h5 class="text-uppercase mt-md-3 text-white bg-dark p-3">
+          <div class="col-md-3 mx-auto">
+            <div class="cab-right mt-5 bg-white mb-5 mb-md-0">
+              <h5
+                class="text-uppercase mt-md-3 text-white bg-dark p-3 text-center"
+              >
                 book a cab
               </h5>
               <form class="row px-4 py-1">
@@ -131,11 +133,11 @@
                 <div class="col-6">
                   <input type="text" placeholder="Start" class="form-control" />
                 </div>
-                <div class="col-6">
+                <div class="col-6 mb-2">
                   <input type="text" placeholder="End" class="form-control" />
                 </div>
                 <div class="col-12">
-                  <select name="" id="">
+                  <select name="" id="" class="form-control">
                     <option value="Mercidis">Choose Vehicle</option>
                     <option value="Mercidis">Mercidis</option>
                     <option value="Mercidis">Jaguar</option>
